@@ -3,6 +3,9 @@ leaflet 2.0.1.9000
 
 BUG FIXES and IMPROVEMENTS
 * Require viridis >= 0.5.1 to avoid namespace issues with viridisLite (#557)
+* Fixed broken mouse events after using leaflet-search from leaflet.extras within shiny applications (#563)
+
+
 
 leaflet 2.0.1
 --------------------------------------------------------------------------------
